# multi-agent-orchestrator

./: .gitignore  README.ko-KR.md  README.md  README.zh-CN.md  pyproject.toml
configs/: live.multi-provider.example.yaml  live.packyapi.yaml  local.example.yaml
docs/: README.md  architecture-baseline.md  architecture-baseline.zh-CN.md  architecture-layers.md  architecture-layers.zh-CN.md  changes.zh-CN 2026-3-16.md  mcp-integration.md  mcp-integration.zh-CN.md  progress.md  progress.zh-CN.md  project-history.zh-CN.md  security-baseline.md  security-baseline.zh-CN.md  team-mode.md  team-mode.zh-CN.md  technical-design-v1.md  technical-design-v1.zh-CN.md  test-manual.ko-KR.md  test-manual.md  test-manual.zh-CN.md  user-manual.md  user-manual.zh-CN.md  v1-target.md  v1-target.zh-CN.md
docs/modules/: README.md
docs/modules/approval/: README.md
docs/modules/chat/: README.md
docs/modules/integration/: README.md
docs/modules/providers/: README.md
docs/modules/registry/: README.md
docs/modules/sessions/: README.md
docs/modules/team/: README.md
src/mao_cli/: __init__.py  chat.py  config.py  gitops.py  main.py  mcp_client.py  mcp_server.py  mcp_tools.py  mergeflow.py  orchestrator.py  providers.py  registry.py  security.py  sessions.py  skills.py  terminal.py  tool_runtime.py
src/mao_cli/core/: __init__.py  models.py
tests/: test_mcp_client.py  test_mcp_tools.py  test_smoke.py  test_tool_runtime.py  test_workflow.py
